styles.css
@media screen and (orientation: portrait) {
    #calculator {
        transform: scale(2.0);
    }
}

body {
    background-color:#46494c;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 40px;
    color:white;
    font-family: 'Roboto', sans-serif;
}

button {
    font-size: 40px;
    color:white;
    font-family: 'Roboto', sans-serif;
    text-align: center;
    padding: 0;
}

button:focus {
    outline: none;
}
.commandRowButton {
    width: 190px;
    height: 90px;
    border-color: black;
    border-style: solid;
    border-width: 2px;
    border-radius: 7px;
    margin-left: 3px;
    margin-right: 3px;
    background-color: #1985a1;
    line-height: 90px;
    text-align: center;
}

.commandRowButton:hover {
    background-color: black;
}

.mainButton {
    width: 90px;
    height: 90px;
    border-color: black;
    border-style: solid;
    border-width: 2px;
    border-radius: 7px;
    background-color: #46494c;
    line-height: 90px;
    text-align: center;
}

.mainButton:hover {
    background-color: black;
}

.operationButton {
    width: 90px;
    height: 90px;
    border-color: black;
    border-style: solid;
    border-width: 2px;
    border-radius: 7px;
    background-color: #1985a1;
    line-height: 90px;
    text-align: center;
}

.operationButton:hover {
    background-color: black;
}

#calculator {
    width: 420px;
    height: 650px;
    background-color: #c5c3c6;
    border-radius: 10px;
    border-style: solid;
    border-width: 2px;
    border-color: black;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
}

#textBox {
    width: 390px;
    height: 120px;
    background-color: white;
    border-radius: 7px;
    border-style: solid;
    border-width: 2px;
    border-color: black;
    margin-top: 10px;
    font-size: 60px;
    line-height: 120px;
    text-align: right;
    color: black;
}

#text {
    padding-right: 10px;
}
#commandRow {
    width: 400px;
    height: 100px;
    display: flex;
    justify-content: center;
    align-items: flex-end;
}

#mainButtonsRow {
    width: 400px;
    height: 400px;
    margin-bottom: 10px;
    display: flex;
    justify-content: center;
    align-items: center;
}

#mainButtonsGrid{
    display: grid;
    position: relative;
    grid-template-columns: 100px 100px 100px 100px;
    grid-template-rows: 100px 100px 100px 100px;
    justify-items: center;
    align-items: center;
}

#buttonOne {}
#buttonTwo {}
#buttonThree {}
#buttonFour {}
#buttonFive {}
#buttonSix {}
#buttonSeven {}
#buttonEight {}
#buttonNine {}
#buttonZero {}
#buttonClear {}
#buttonDelete {}
#buttonAdd {}
#buttonSubtract {}
#buttonMultiply {}
#buttonDivide {}
#buttonEquals {}
#buttonDecimal {}

    

